# iota-streams-api

./: Cargo.toml  README.md
frontend/: package-lock.json  package.json
frontend/components/: Input.vue
frontend/pages/: index.vue
src/: main.rs
