[package]
name = "iota-streams-api"
version = "0.0.1"
authors = ["huhn511 <huhneinfachIOTA.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = { version="2.0.0", features=["openssl"] }
futures = "0.3.1"
serde = { version = "1.0.43", features = ["derive"] }
serde_json = "1.0.16"

iota-core = { git = "https://github.com/iotaledger/iota.rs" }